@@ -1,3 +1,8 @@
+2008-09-17  Emilio Meschi  <emilio.meschi@cern.ch>
+
+	* tag V01-03-05
+	* fix scalers workloop
+	
 2008-08-27  Emilio Meschi  <emilio.meschi@cern.ch>
 
 	* tag V01-03-04
